examples/reference/directive_typo_elseif_fixit_error.err
Assembly failed:
4: ERROR [asm202]
    4 |         .elsefi 1
        ^
help: did you mean .elseif?
suggestion: replace 4:9-16 with ".ELSEIF"
ERROR: Unknown directive .ELSEFI
